// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Badge baseVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    红点徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: -3px; top: 3px;"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: 1px; top: -1px;"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: 1px; top: 1px;"
      >
        <!---->
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    数字徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: 0px; top: 0px;"
      >
        8
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        8
      </div>
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: 2px; top: 2px;"
      >
        8
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    自定义徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="通知"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-notification"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M4 8C4 3.58172 7.58172 0 12 0C16.4183 0 20 3.58172 20 8V12.6972L22 15.6972V20H16.3885C15.9338 22.004 14.1416 23.5 12 23.5C9.85841 23.5 8.06624 22.004 7.61151 20H2V15.6972L4 12.6972V8ZM9.70802 20C10.0938 20.883 10.9748 21.5 12 21.5C13.0252 21.5 13.9062 20.883 14.292 20H9.70802ZM12 2C8.68629 2 6 4.68629 6 8V13.3028L4 16.3028V18H20V16.3028L18 13.3028V8C18 4.68629 15.3137 2 12 2Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: 0px; top: 2px;"
      >
        NEW
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          红点徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: -3px; top: 3px;"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: 1px; top: -1px;"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: 1px; top: 1px;"
            >
              <!---->
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          数字徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: 0px; top: 0px;"
            >
              8
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              8
            </div>
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: 2px; top: 2px;"
            >
              8
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          自定义徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="通知"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-notification"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M4 8C4 3.58172 7.58172 0 12 0C16.4183 0 20 3.58172 20 8V12.6972L22 15.6972V20H16.3885C15.9338 22.004 14.1416 23.5 12 23.5C9.85841 23.5 8.06624 22.004 7.61151 20H2V15.6972L4 12.6972V8ZM9.70802 20C10.0938 20.883 10.9748 21.5 12 21.5C13.0252 21.5 13.9062 20.883 14.292 20H9.70802ZM12 2C8.68629 2 6 4.68629 6 8V13.3028L4 16.3028V18H20V16.3028L18 13.3028V8C18 4.68629 15.3137 2 12 2Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: 0px; top: 2px;"
            >
              NEW
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          圆形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              8
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          方形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
              style="right: -2px; top: -6px;"
            >
              8
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          气泡徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="商店"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-shop"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 5.5C7.5 3.01472 9.51472 1 12 1C14.4853 1 16.5 3.01472 16.5 5.5V7H21V23H3V7H7.5V5.5ZM7.5 9H5V21H19V9H16.5V12H14.5V9H9.5V12H7.5V9ZM14.5 7V5.5C14.5 4.11929 13.3807 3 12 3C10.6193 3 9.5 4.11929 9.5 5.5V7H14.5Z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
            >
              领取积分
            </div>
          </div>
        </div>
        <div
          class="summary"
          style="margin-bottom: 16px;"
        >
          角标
        </div>
        <div
          class="t-cell"
        >
          <div
            class="t-cell__left"
          >
            <!---->
            <!---->
          </div>
          <div
            class="t-cell__title"
          >
            <div
              class="t-cell__title-text"
            >
              单行标题
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__ribbon-outer"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
                style="right: 0px; top: 0px;"
              >
                New
              </div>
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件尺寸
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          Large
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--large t-avatar--circle"
                  >
                    <div
                      class="t-avatar__icon"
                    >
                      <svg
                        class="t-icon t-icon-user"
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          d="M12 4C10.067 4 8.5 5.567 8.5 7.5C8.5 9.433 10.067 11 12 11C13.933 11 15.5 9.433 15.5 7.5C15.5 5.567 13.933 4 12 4ZM6.5 7.5C6.5 4.46243 8.96243 2 12 2C15.0376 2 17.5 4.46243 17.5 7.5C17.5 10.5376 15.0376 13 12 13C8.96243 13 6.5 10.5376 6.5 7.5ZM3 19C3 16.2386 5.23858 14 8 14H16C18.7614 14 21 16.2386 21 19V22H3V19ZM8 16C6.34315 16 5 17.3431 5 19V20H19V19C19 17.3431 17.6569 16 16 16H8Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  
                </div>
                <div
                  class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
                  style="right: 7px; top: 7px;"
                >
                  8
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          Middle
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--medium t-avatar--circle"
                  >
                    <div
                      class="t-avatar__icon"
                    >
                      <svg
                        class="t-icon t-icon-user"
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          d="M12 4C10.067 4 8.5 5.567 8.5 7.5C8.5 9.433 10.067 11 12 11C13.933 11 15.5 9.433 15.5 7.5C15.5 5.567 13.933 4 12 4ZM6.5 7.5C6.5 4.46243 8.96243 2 12 2C15.0376 2 17.5 4.46243 17.5 7.5C17.5 10.5376 15.0376 13 12 13C8.96243 13 6.5 10.5376 6.5 7.5ZM3 19C3 16.2386 5.23858 14 8 14H16C18.7614 14 21 16.2386 21 19V22H3V19ZM8 16C6.34315 16 5 17.3431 5 19V20H19V19C19 17.3431 17.6569 16 16 16H8Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  style="right: 5px; top: 5px;"
                >
                  8
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Badge > Badge sizeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    Large
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar__wrapper"
    >
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            <div
              class="t-avatar t-avatar--large t-avatar--circle"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 4C10.067 4 8.5 5.567 8.5 7.5C8.5 9.433 10.067 11 12 11C13.933 11 15.5 9.433 15.5 7.5C15.5 5.567 13.933 4 12 4ZM6.5 7.5C6.5 4.46243 8.96243 2 12 2C15.0376 2 17.5 4.46243 17.5 7.5C17.5 10.5376 15.0376 13 12 13C8.96243 13 6.5 10.5376 6.5 7.5ZM3 19C3 16.2386 5.23858 14 8 14H16C18.7614 14 21 16.2386 21 19V22H3V19ZM8 16C6.34315 16 5 17.3431 5 19V20H19V19C19 17.3431 17.6569 16 16 16H8Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            
          </div>
          <div
            class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
            style="right: 7px; top: 7px;"
          >
            8
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    Middle
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar__wrapper"
    >
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            <div
              class="t-avatar t-avatar--medium t-avatar--circle"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 4C10.067 4 8.5 5.567 8.5 7.5C8.5 9.433 10.067 11 12 11C13.933 11 15.5 9.433 15.5 7.5C15.5 5.567 13.933 4 12 4ZM6.5 7.5C6.5 4.46243 8.96243 2 12 2C15.0376 2 17.5 4.46243 17.5 7.5C17.5 10.5376 15.0376 13 12 13C8.96243 13 6.5 10.5376 6.5 7.5ZM3 19C3 16.2386 5.23858 14 8 14H16C18.7614 14 21 16.2386 21 19V22H3V19ZM8 16C6.34315 16 5 17.3431 5 19V20H19V19C19 17.3431 17.6569 16 16 16H8Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
            style="right: 5px; top: 5px;"
          >
            8
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge themeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    圆形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        8
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    方形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
        style="right: -2px; top: -6px;"
      >
        8
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    气泡徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="商店"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-shop"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.5 5.5C7.5 3.01472 9.51472 1 12 1C14.4853 1 16.5 3.01472 16.5 5.5V7H21V23H3V7H7.5V5.5ZM7.5 9H5V21H19V9H16.5V12H14.5V9H9.5V12H7.5V9ZM14.5 7V5.5C14.5 4.11929 13.3807 3 12 3C10.6193 3 9.5 4.11929 9.5 5.5V7H14.5Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
      >
        领取积分
      </div>
    </div>
  </div>
  <div
    class="summary"
    style="margin-bottom: 16px;"
  >
    角标
  </div>
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        单行标题
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge t-badge__ribbon-outer"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
          style="right: 0px; top: 0px;"
        >
          New
        </div>
      </div>
      
    </div>
    <!---->
  </div>
</div>
`;
